<resources>
    <string name="app_name">StudyQuiz</string>
    <string name="userlogin">userlogin</string>
    <string name="password">PASSWORD</string>
    <string name="usernamefield">usernamefield</string>
    <string name="passwordfield">passwordfield</string>
    <string name="username">USERNAME</string>
    <string name="login">LOGIN</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Jadwal</string>
    <string name="title_notifications">Profil</string>
    <string name="Nilai_Quiz"><![CDATA[Nilai Quiz     : 0]]></string>
    <string name="Nilai_Ujian"><![CDATA[Nilai Ujian    : 0]]></string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>