<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/template"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="229dp"
            android:layout_height="201dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="130dp"
            android:background="@drawable/logoapk">

        </ImageView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="330dp"
            android:background="@drawable/username"
            android:contentDescription="@string/usernamefield">

        </ImageView>

        <EditText
            android:id="@+id/usernamefl"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="333dp"
            android:autofillHints="username"
            android:fontFamily="@font/podkova_semibold"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black">

        </EditText>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="451dp"
            android:background="@drawable/password"
            android:contentDescription="@string/passwordfield">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="300dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="USERNAME"
            android:textColor="@color/black"
            android:textSize="20sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="420dp"
            android:fontFamily="@font/poppinsmedium"
            android:text="PASSWORD"
            android:textColor="@color/black"
            android:textSize="20sp">

        </TextView>

        <EditText
            android:id="@+id/passwordfl"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:layout_marginTop="449dp"
            android:autofillHints="password"
            android:fontFamily="@font/podkova_semibold"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:maxLength="12"
            android:minHeight="48dp"
            android:textColor="@color/black">

        </EditText>

        <Button
            android:id="@+id/logbt"
            android:layout_width="220dp"
            android:layout_height="73dp"
            android:layout_gravity="center"
            android:layout_marginTop="200dp"
            android:fontFamily="@font/podkova_semibold"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textColorHighlight="@color/black"
            android:textSize="25sp">

        </Button>
    </FrameLayout>

</LinearLayout>